--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <title>Pete Way: About</title>
+    <link rel="icon" href="./Resources/Pete.png">
     <link rel="stylesheet" type="text/css" href="./Libraries/semantic/out/semantic.min.css">
     <script src="./Libraries/jquery-3.1.1.js"></script>
     <script src="./Libraries/semantic/out/semantic.min.js"></script>
@@ -35,8 +36,9 @@
 
         <!-- Masthead -->
         <div class="ui inverted vertical masthead center aligned segment">
-            <div class="ui text container">
-                <h1 class="ui inverted huge header" style="padding-top: 4em;">Pete Way</h1>
+            <div class="ui text container" id="masthead contents" >
+                <img class="ui masthead image" src="Resources/Pete.png">
+                <h1 class="ui inverted huge header" style="padding-top: 1.5em;">Pete Way</h1>
                 <h2 class="ui inverted header">B.S. in Information Security, pursuing M.S. in Data Science, and
                     Research
                     Assistant</h2>
