--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                     Bachelor's of Science in Computer Science: Information Security
                                 </div>
                                 <div class="description" style="color: #eeeeee;">
-                                    Studied at the University of Tennessee at Chattanooga from 2014-2018
+                                    Received: May 2018
                                 </div>
                             </div>
                         </div>
@@ -69,9 +69,7 @@
                                     Master's of Science in Computer Science: Data Science
                                 </div>
                                 <div class="description" style="color: #eeeeee;">
-                                    Started at the University of Tennessee at Chattanooga in 2018.
-                                    <br>
-                                    Estimated graduation: May 2020.
+                                    Received: May 2020.
                                 </div>
                             </div>
                         </div>
