--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
             <div class="ui text container" id="masthead contents" >
                 <img class="ui masthead image" src="Resources/Pete.png">
                 <h1 class="ui inverted huge header" style="padding-top: 1.5em;">Pete Way</h1>
-                <h2 class="ui inverted header">B.S. in Information Security, pursuing M.S. in Data Science, and
-                    Research
-                    Assistant</h2>
+                <h2 class="ui inverted header">B.S. in Information Security <br> M.S. in Data Science <br> Data Scientist</h2>
             </div>
         </div>
 
