--- a/index.html
+++ b/index.html
@@ -85,13 +85,55 @@
                             <img class="ui circular mini image" src="./Resources/cuip.ico">
                             <div class="content">
                                 <div class="header" style="color: #eeeeee;">
+                                    IT Specialist</a>
+                                </div>
+                                <div class="description" style="color: #eeeeee;">
+                                    Centers for Disease Control and Prevention (CDC)
+                                    Office of Communication (OC)
+                                    Division of Digital Media (DDM)
+                                    <br>
+                                    Employed 2024-Present
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img class="ui circular mini image" src="./Resources/cuip.ico">
+                            <div class="content">
+                                <div class="header" style="color: #eeeeee;">
+                                    Data Scientist III</a>
+                                </div>
+                                <div class="description" style="color: #eeeeee;">
+                                    Peraton
+                                    <br>
+                                    Employed 2022-2024
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img class="ui circular mini image" src="./Resources/cuip.ico">
+                            <div class="content">
+                                <div class="header" style="color: #eeeeee;">
+                                    Digital Media Analyst Fellow</a>
+                                </div>
+                                <div class="description" style="color: #eeeeee;">
+                                    Centers for Disease Control and Prevention (CDC)<br>
+                                    Office of the Associate Director for Communication (OADC)
+                                    <br>
+                                    Employed 2020-2022
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img class="ui circular mini image" src="./Resources/cuip.ico">
+                            <div class="content">
+                                <div class="header" style="color: #eeeeee;">
                                     Research Assistant for <a href="https://www.utc.edu/faculty/mina-sartipi/index.php"
                                         target="_blank">Dr. Mina Sartipi</a>
                                 </div>
                                 <div class="description" style="color: #eeeeee;">
-                                    Working in bleeding-edge research projects (see below).
+                                    Worked in bleeding-edge research projects (see below).
                                     <br>
-                                    Employed 2018-Current
+                                    Employed 2018-2020
                                 </div>
                             </div>
                         </div>
@@ -102,7 +144,8 @@
                                     Covenant Transport
                                 </div>
                                 <div class="description" style="color: #eeeeee;">
-                                    Weather Analyst; advanced warning of bad weather for drivers.
+                                    Assessment of adverse weather conditions in areas of company reach. Redirection, outreach, 
+                                    and coordination of company assets around areas of impact.
                                     <br>
                                     Employed 2017-2018
                                 </div>
