--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <h3><i class="book icon"></i> Experience</h3>
                     <div class="ui relaxed divided list">
                         <div class="item">
-                            <img class="ui circular mini image" src="./Resources/cuip.ico">
+                            <img class="ui circular mini image" src="./Resources/cdc.png">
                             <div class="content">
                                 <div class="header" style="color: #eeeeee;">
                                     IT Specialist</a>
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <img class="ui circular mini image" src="./Resources/cuip.ico">
+                            <img class="ui circular mini image" src="./Resources/peraton.png">
                             <div class="content">
                                 <div class="header" style="color: #eeeeee;">
                                     Data Scientist III</a>
@@ -110,7 +110,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <img class="ui circular mini image" src="./Resources/cuip.ico">
+                            <img class="ui circular mini image" src="./Resources/cdc.png">
                             <div class="content">
                                 <div class="header" style="color: #eeeeee;">
                                     Digital Media Analyst Fellow</a>
