--- a/index.html
+++ b/index.html
@@ -84,14 +84,12 @@
                         <div class="item">
                             <img class="ui circular mini image" src="./Resources/CDC.png">
                             <div class="content">
-                                <div class="header" style="color: #eeeeee;">
-                                    IT Specialist</a>
+                                <div class="header" style="color: #eeeeee;">IT Specialist</a>
                                 </div>
                                 <div class="description" style="color: #eeeeee;">
-                                    Centers for Disease Control and Prevention (CDC)
-                                    Office of Communication (OC)
-                                    Division of Digital Media (DDM)
-                                    <br>
+                                    Centers for Disease Control and Prevention (CDC)<br>
+                                    Office of Communication (OC)<br>
+                                    Division of Digital Media (DDM)<br>
                                     Employed 2024-Present
                                 </div>
                             </div>
