--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                     Covenant Transport
                                 </div>
                                 <div class="description" style="color: #eeeeee;">
-                                    Assessment of adverse weather conditions in areas of company reach. Redirection, outreach, 
+                                    Assessment of adverse weather conditions in areas of company reach.<br>Redirection, outreach, 
                                     and coordination of company assets around areas of impact.
                                     <br>
                                     Employed 2017-2018
