--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
             <div class="ui horizonal divider"></div>
 
-            <div class="ui vertical stripe segment">
+<!--             <div class="ui vertical stripe segment">
                 <div class="ui text container">
                     <h3><i class="file pdf outline icon"></i> Other Publications</h3>
                 </div>
@@ -218,7 +218,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </body>
 
 </html>
